--- a/css/style.css
+++ b/css/style.css
@@ -277,7 +277,7 @@ a {
   background-color: white;
   position: fixed;
   z-index: 2;
-  background-image: url("https://michielkauwatjoe.com/images/header.jpg"); }
+  background-image: url("https://michielkauwatjoe.art/images/header.jpg"); }
 
 #headercontent {
   width: auto;
